# unsolicited-advice-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  Makefile  README.md  REFERENCE.md  go.mod  unsolicited-advice.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  unsolicitedadvice_sdk.py  unsolicitedadvice_types.py
py/core/: context.py  control.py  error.py  helpers.py  response.py  result.py
py/entity/: advice_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  log_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_advice_direct.py  test_advice_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_query.py  register.py  result_basic.py  transform_request.py  transform_response.py
(+418 files in other folders)
